--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "tailwindcss": "npx tailwindcss -o ./src/assets/css/app.css --watch",
     "preview": "vite preview"
   },
   "license": "MIT",
