--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^11.15.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
+    "sass": "^1.49.9",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
