--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
     "i18next": "^21.6.14",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -22,6 +27,7 @@
     "react-i18next": "^11.15.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
+    "react-text-typist": "^1.0.9",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23"
   },
