--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "6",
     "react-text-typist": "^1.0.9",
     "sass": "^1.49.9",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
